resource tabled added

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
+  first_name: MyString
+  last_name: MyString
   email: MyString
+  password: MyString
 
 two:
-  name: MyString
+  first_name: MyString
+  last_name: MyString
   email: MyString
+  password: MyString
